Apply media queries to the listing .hero image to avoid displaying on mobile devices. Measuring for a 3G connection, this cuts down page load times on mobile from 15 seconds to 5 seconds.

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -713,6 +713,12 @@ specificity overrides some default styles */
 		&.preview-post {
 			.hero-container {
 				border-radius: 0;
+
+				height: 0px !important;
+				.hero {
+					background: #F48023 !important;
+					height: 0% !important;
+				}
 			}
 		}
 		&.full-post {
